--- a/example.html
+++ b/example.html
@@ -1,19 +1,17 @@
-<!-- You might want to add additional HTML elements to ST. 
-    It's good practice to separate it out from your code -->
-<div class="example-extension-settings">
+<div class="custom-server-settings">
     <div class="inline-drawer">
         <div class="inline-drawer-toggle inline-drawer-header">
-            <b>Extension Example</b>
+            <b>Custom Server Integration</b>
             <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
         </div>
         <div class="inline-drawer-content">
-            <div class="example-extension_block flex-container">
-                <input id="my_button" class="menu_button" type="submit" value="Example Button" />
+            <div class="custom-server_block flex-container">
+                <input id="my_button" class="menu_button" type="submit" value="Test Server Connection" />
             </div>
 
-            <div class="example-extension_block flex-container">
+            <div class="custom-server_block flex-container">
                 <input id="example_setting" type="checkbox" />
-                <label for="example_setting">This is an example</label>
+                <label for="example_setting">Enable Custom Integration</label>
             </div>
 
             <hr class="sysHR" />
